tests/paczka1/small_fuzzy/86356516.err
Error in line 6: AWM3 S770 46,8
Error in line 9: AWM3 A230 34,3
Error in line 12: zKfPsOn A230 37,82
Error in line 4: zKfPsOn A230 55,5
Error in line 13: zKfPsOn S770 51,8
